syntax = "proto3";

package webitel.chat.service.flowclient;

service FlowClientService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc WaitMessage(WaitMessageRequest) returns (WaitMessageResponse) {}
    rpc CloseConversation(CloseConversationRequest) returns (CloseConversationResponse) {}
}

message Message {
    int64 id = 1;
    string type = 2;

    message TextMessage {
        string text = 1;
    }

    oneof value {
        TextMessage text_message = 3;
    }
}

message Error {
    string id = 1;
    string message = 2;
}

message SendMessageRequest {
    int64 conversation_id = 1;
    Message messages = 2;
}

message SendMessageResponse {
    Error error = 1;
}

message WaitMessageRequest {
    int64 conversation_id = 1;
    string confirmation_id = 2;
}

message WaitMessageResponse {
    int64 timeout_sec = 1;
    repeated Message messages = 2;
    Error error = 3;
}

message CloseConversationRequest {
    int64 conversation_id = 1;
    string cause = 2;
}

message CloseConversationResponse {
    Error error = 1;
}

service FlowAdapterService {
    rpc Init(InitRequest) returns (InitResponse) {}
    rpc SendMessageToFlow(SendMessageToFlowRequest) returns (SendMessageToFlowResponse) {}
}

message InitRequest {
    int64 conversation_id = 1;
    int64 profile_id = 2;
    int64 domain_id = 3;
    Message message = 4;
    map<string, string>  variables = 5;
}

message InitResponse {
    Error error = 1;
}

message SendMessageToFlowRequest {
    int64 conversation_id = 1;
    Message message = 2;
}

message SendMessageToFlowResponse {
    Error error = 1;
}